2003-08-05  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by John.

        * kjs/list.cpp:
	(List::copyTail): Test for loop termination with < instead of !=,
	since i starts at 1 but size could be 0. Do the same for the other
	loop for consistency's sake.
	
2003-08-01  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by John.

	- fixed 3222621 - Cryptic "anonymous function hack" messages in console (10.2.4)
	
        * kjs/lexer.cpp:
        (Lexer::lex): Remove useless debug spew.

=== Safari-91 ===

2003-07-30  Darin Adler  <darin@apple.com>

        Reviewed by Dave.

        - fixed problem where some JavaScriptCore symbols had no namespace or prefix

        * kjs/grammar.y: Added a define for yylloc to make it use the kjs prefix.
        This is the same thing done for the rest of the symbols automatically by yacc,
        but for some reason it's not done for yyloc. Also make automatic() function static.
        * kjs/grammar.cpp: Regenerated.
        * kjs/lexer.cpp: Use kjsyylloc instead of yyloc.

        * pcre/pcre.h: Add defines to prepend kjs prefixes for all the PCRE functions.

2003-07-30  Darin Adler  <darin@apple.com>

        * Makefile.am: Include the subdirectory with the PCRE code in it.

2003-07-30  John Sullivan  <sullivan@apple.com>

	- JavaScriptCore part of fix for 3284525 -- AutoFill fills in 
	only e-mail address field of New Account form on Apple Store Japan

        Reviewed by Darin

        * JavaScriptCore.pbproj/project.pbxproj:
	Mark pcre.h as a Private header

2003-07-28  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Richard.

	- fixed 3240814 - LEAK: 120 byte leak in JavaScript parser in Sherlock Movies channel
	
        * kjs/internal.cpp:
        (Parser::parse): ref() and deref() the program node, to make sure to clean up properly,
	before deleting it.
        (InterpreterImp::checkSyntax): Likewise.

=== Safari-90 ===

2003-07-22  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by John.
